Fix issue in authorize function when the callback threw an error (#8)
* fix: remove try-catch from authorize policy function

This created an infinite login loop when the callback function threw an error
Now if there is no user, the auth0Client couldn't recover the session we directly force a login

* chore: update build code

* style: fix alignment

--- a/example/src/App.css
+++ b/example/src/App.css
@@ -56,4 +56,5 @@ p {
   gap: 12px;
   margin: 24px 0px;
   align-items: center;
+  justify-content: center;
 }
